# ccpn_project_checker

./: .gitignore  README.md  TODO.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml  test_and_lint.yml
scripts/: check-project  project-checker  project_checker  test  walk-metamodel  write-cli-expected
src/ccpn_project_checker/: DiskModelChecker.py  MetaModelWalker.py  main.py  test.py  util.py
src/ccpn_project_checker/model_info/: v_3_1_0_object_info.json  v_3_1_0_short_name_to_guid.json
src/ccpn_project_checker/optional/: __init__.py  abstract_optional.py
src/ccpn_project_checker/test_data/: cli_test_output.txt
src/ccpn_project_checker/test_data/basic_exo_links_not_found.ccpn/ccpnv3/memops/Implementation/: basic_exo_links_not_found.xml
src/ccpn_project_checker/test_data/empty_good_project_multiple_root_xml_files.ccpn/ccpnv3/memops/Implementation/: empty_good_project_mutiple_root_xml_files_1.xml
src/ccpn_project_checker/test_data/memops_root_no_storage_unit.ccpn/ccpnv3/memops/Implementation/: memops_root_no_storage_unit.xml
src/ccpn_project_checker/test_data/root_not_memops_root_element.ccpn/ccpnv3/memops/Implementation/: root_not_memops_root_element.xml
src/ccpn_project_checker/test_data/root_version_missing.ccpn/ccpnv3/memops/Implementation/: root_version_missing.xml
src/ccpn_project_checker/tests/: api_test_data.py  api_test_data_internal.py  cli_test_data.py  test_api.py  test_cli.py  testing_utils.py  write_cli_test_data.py
src/project_checker/: DiskModelChecker.py  MetaModelWalker.py  main.py
src/project_checker/model_info/: data_file_names.txt  v_3_1_0_guid_to_storage_location.json
src/project_checker/optional/: compatible_abc.py  nothing.py  optional.py  something.py
src/project_checker/test_data/bad_memops_root_xml.ccpn/ccpnv3/memops/Implementation/: bad_memops_root_xml.xml
src/project_checker/test_data/empty_storage_unit.ccpn/ccpnv3/memops/Implementation/: empty_storage_unit.xml
src/project_checker/test_data/no_exo_links.ccpn/ccpnv3/memops/Implementation/: no_exo_links.xml
src/project_checker/tests/: api_test_data.py  api_test_data_internal.py  test_api.py  test_cli.py  testing_utils.py  write_cli_test_data.py
(+50 files in other folders)
