[project]
name = "ccpn-project-checker"
version = "0.1.1"
description = "A project checker for ccpn v3+ projects"
authors = [
    { name = "varioustoxins", email = "garyt.and.sarahb@gmail.com" }
]
dependencies = [
    "lxml>=5.2.0",
    "pytest>=8.1.1",
    "time-machine>=2.14.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
cli-name = "project_checker.main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ccpn_project_checker"]
