[project]
name = "ccpn-project-checker"
version = "0.1.17"
description = "A project checker for ccpn v3+ projects"
authors = [
    { name = "varioustoxins", email = "garyt.and.sarahb@gmail.com" }
]
dependencies = [
    "lxml>=4.9.0",
    "pytest>=7.4.0",
    "time-machine>=2.14.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
project-checker = "ccpn_project_checker.main:main"
test-project-checker = "ccpn_project_checker.test:run_tests"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ccpn_project_checker"]
